xee-xpath/tests/snapshots/xpath__absent_context.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\".\")"
---
Err(
    SpannedError {
        error: XPDY0002,
        span: Some(
            SourceSpan(
                0,
                1,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
