xee-xpath/tests/snapshots/xpath__absent_context_with_operation.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\". + 1\")"
---
Err(
    SpannedError {
        error: XPDY0002,
        span: Some(
            SourceSpan(
                0,
                5,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
