xee-xpath/tests/snapshots/xpath__cast_as_base64_binary_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'flurb' cast as xs:base64Binary\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                31,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
