xee-xpath/tests/snapshots/xpath__cast_as_language_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'en us' cast as xs:language\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                27,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
