xee-xpath/tests/snapshots/xpath__cast_as_name_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo bar' cast as xs:Name\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                25,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
