xee-xpath/tests/snapshots/xpath__cast_as_ncname_with_colon_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo:bar' cast as xs:NCName\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                27,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
