xee-xpath/tests/snapshots/xpath__cast_as_qname_fails_multiple_prefixes.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'xs:bar:baz' cast as xs:QName\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                29,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
