xee-xpath/tests/snapshots/xpath__cast_as_qname_fails_unknown_prefix.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo:bar' cast as xs:QName\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: Some(
            SourceSpan(
                0,
                26,
            ),
        ),
        detail: None,
        contexts: [],
    },
)
