xee-xpath/tests/snapshots/xpath__cast_empty_sequence_as_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"() cast as xs:string\")"
---
Err(
    SpannedError {
        error: XPTY0004(
            Some(
                "cast requires a value, got empty sequence (target type: String)",
            ),
        ),
        span: Some(
            SourceSpan(
                0,
                20,
            ),
        ),
        detail: Some(
            "cast requires a value, got empty sequence (target type: String)",
        ),
        contexts: [],
    },
)
